[gd_scene load_steps=12 format=3 uid="uid://bpkdoaq7tk0b8"]

[ext_resource type="Script" uid="uid://cpyers3ikip6v" path="res://addons/shape_texture_2d/shape_texture_2d.gd" id="1_7q31a"]
[ext_resource type="Script" uid="uid://dd7wpi5fc85n4" path="res://feature/character/character.gd" id="1_p76ae"]
[ext_resource type="Texture2D" uid="uid://bqs21hc4hf04t" path="res://assets/sprite/for vfx/dotline_test.png" id="2_o4l87"]
[ext_resource type="Script" uid="uid://cstrxukhnpb1h" path="res://addons/shape_texture_2d/drawable_ellipse.gd" id="2_qnd3l"]
[ext_resource type="Texture2D" uid="uid://54p8csuo3pwf" path="res://assets/sprite/for vfx/cross.png" id="3_7nmth"]
[ext_resource type="Script" uid="uid://begejqexkj7yf" path="res://common/StateMachina/StateMachina.gd" id="6_yyxt3"]
[ext_resource type="Script" uid="uid://om0dhmib7xpd" path="res://feature/character/SMStates/idle.gd" id="7_x8p0b"]
[ext_resource type="Script" uid="uid://hqgdp8vjvdca" path="res://feature/character/SMStates/move.gd" id="8_g5h2o"]

[sub_resource type="Resource" id="Resource_hqprc"]
script = ExtResource("2_qnd3l")

[sub_resource type="Texture2D" id="Texture2D_lcb6a"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("1_7q31a")
size = Vector2i(24, 24)
shape = SubResource("Resource_hqprc")
fill_type = 0
fill_color = Color(0.820196, 0.277411, 0.726446, 1)
fill_from = Vector2(0, 0)
fill_to = Vector2(1, 0)
fill_repeat = "pad"
stroke_type = 0
stroke_width = 0.0
stroke_color = Color(0, 0, 0, 1)
stroke_from = Vector2(0, 0)
stroke_to = Vector2(1, 0)
stroke_repeat = "pad"
stroke_joint = "round"
offset = Vector2(0, 0)
rotation = 0.0
scale = Vector2(1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_l4ehk"]
radius = 8.0

[node name="Character" type="CharacterBody2D"]
script = ExtResource("1_p76ae")

[node name="MovingLine" type="Line2D" parent="."]
unique_name_in_owner = true
visible = false
texture_filter = 1
texture_repeat = 2
points = PackedVector2Array(0, 0, 0, 0)
width = 64.0
texture = ExtResource("2_o4l87")
texture_mode = 1
antialiased = true

[node name="Cross" type="Sprite2D" parent="MovingLine"]
unique_name_in_owner = true
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_7nmth")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("Texture2D_lcb6a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_l4ehk")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="CharacterStateMachina" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_yyxt3")

[node name="Idle" type="Node" parent="CharacterStateMachina"]
unique_name_in_owner = true
script = ExtResource("7_x8p0b")

[node name="Move" type="Node" parent="CharacterStateMachina"]
unique_name_in_owner = true
script = ExtResource("8_g5h2o")

[node name="Marker2D" type="RayCast2D" parent="."]

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
